--- a/app.scss
+++ b/app.scss
@@ -19,3 +19,10 @@ div{
   flex-direction: column;
   align-items: center;
 }
+button{
+  //border: none;
+  //width: 50px;
+  //height: 50px;
+  //border-radius: 50%;
+  margin: 10px;
+}
