--- a/app.scss
+++ b/app.scss
@@ -15,9 +15,9 @@ div{
   align-items: baseline;
   margin: 20px;
 }
+
 .col{
-  flex-direction: column;
-  align-items: center;
+  display: block;
 }
 button{
   //border: none;
@@ -25,4 +25,15 @@ button{
   //height: 50px;
   //border-radius: 50%;
   margin: 10px;
+}
+#blockd{
+  width: 50%;
+}
+#blockg{
+  width: 50%;
+}
+#blockclock{
+  width: 100%;
+  border: white solid 2px;
+  border-radius: 3rem;
 }
