--- a/app.scss
+++ b/app.scss
@@ -1,5 +1,6 @@
 
 @import url("hover.css");
+@import 'node_modules/scut/dist/scut';
 
 body{
   background-color: #007bff;
@@ -23,11 +24,11 @@ div{
   display: block;
 }
 button{
-  //border: none;
-  //width: 50px;
-  //height: 50px;
-  //border-radius: 50%;
+  border: none;
+  width: 130px;
+  padding: 5px;
   margin: 10px;
+  text-align: center;
 }
 #blockd{
   width: 50%;
@@ -39,4 +40,25 @@ button{
   width: 100%;
   border: white solid 2px;
   border-radius: 3rem;
+  div:nth-child(1){
+    font-size: 56px;
+    p{
+      text-align: center;
+      margin: 0px;
+      width: 100%;
+    }
+  }
+}
+.triangleup{
+  @include scut-triangle(up, 2rem 2rem,white);
+  cursor: pointer;
+}
+
+.triangledown{
+  @include scut-triangle(down, 2rem 2rem,white);
+  cursor: pointer;
+}
+
+.between{
+  padding: 1rem;
 }
