--- a/app.scss
+++ b/app.scss
@@ -10,6 +10,7 @@ body{
 h1{
   text-align: center;
   color: white;
+  font-size: 61px;
 }
 div{
   color: white;
@@ -32,9 +33,12 @@ button{
 }
 #blockd{
   width: 50%;
+  font-size: 24px;
 }
 #blockg{
-  width: 50%;
+  width: 40%;
+  font-size: 24px;
+
 }
 #blockclock{
   width: 100%;
